change  to <code>monit</code> in p-note class in jobs.html

--- a/jobs.html.md.erb
+++ b/jobs.html.md.erb
@@ -95,7 +95,7 @@ job:
 
 See the [monit file example](#running-jobs).
 
-<p class="note"><strong>Note</strong>: When developing or testing a release, you can use an empty `monit` file.</p>
+<p class="note"><strong>Note</strong>: When developing or testing a release, you can use an empty <code>monit</code> file.</p>
 
 #### <a id="errand-monitoring"></a>Errand Monitoring ####
 
