move BOSH Resurrector to docs-bosh repo

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -42,3 +42,4 @@ Run `bosh help --all` to see all available BOSH commands.
 * [Understanding the BOSH Deployment Manifest](./deployment-manifest.html)
 * [Sample BOSH Deployment Manifest](./sample-manifest.html)
 * [How to Locate and Watch Logs on Job VMs](./job-logs.html)
+* [Using the BOSH Resurrector](./bosh-resurrector.html)
