--- a/create-release.html.md.erb
+++ b/create-release.html.md.erb
@@ -138,8 +138,8 @@ case $1 in
 
     exec /var/vcap/packages/ruby_1.9.3/bin/bundle exec \
       rackup -p <%%= properties.web_ui.port %> \
-      >  $LOG_DIR/web_ui.stdout.log \
-      >> $LOG_DIR/web_ui.stderr.log
+      >>  $LOG_DIR/web_ui.stdout.log \
+      2>> $LOG_DIR/web_ui.stderr.log
 
     ;;
 
