--- a/sysadmin-commands.html.md.erb
+++ b/sysadmin-commands.html.md.erb
@@ -7,20 +7,23 @@ This document lists the fundamental BOSH commands you use to perform System Admi
 ## <a id="general"></a>General Purpose ##
 Use these commands to log into and connect with the BOSH Director.
 
-<table border="1" class="nice" >
+<table class="nice" >
   <tr>
     <th>Command</th>
     <th>Description</th>
   </tr>
   <tr>
     <td><code>login [USERNAME] [PASSWORD]</code></td>
-	<td>Authenticates a user with the BOSH Director when you provide a username 	    and password. Prompts for this information if you omit it.
-	</td> 
+	<td>Authenticates a user with the BOSH Director when you provide a username
+		and password. Prompts for this information if you omit it.
+	</td>
   </tr>
   <tr>
     <td><code>target [DIRECTOR_URL] [NAME]</code></td>
-	<td>Connects to the specified BOSH Director URL for ongoing communication. 		   You can provide `NAME` to set an alias for the Director.<br /><br />
-        Displays the currently targeted Director if you do not provide a  
+	<td>Connects to the specified BOSH Director URL for ongoing communication.
+		You can provide <code>NAME</code> to set an alias for the Director.
+		<br />
+        Displays the currently targeted Director if you do not provide a
 		URL.
 	</td>
   </tr>
@@ -29,18 +32,25 @@ Use these commands to log into and connect with the BOSH Director.
 ## <a id="cluster"></a>Cluster Management ##
 Use these commands to administer deployment manifests and all aspects of cluster management, such as jobs, errands, tasks, and logs.
 
-<table border="1" class="nice" >
+<table class="nice" >
   <tr>
     <th>Command</th>
     <th>Description</th>
   </tr>
   <tr>
     <td><code>cloudcheck [DEPLOYMENT_NAME] [--auto] [--report]</code></td>
-	<td>Scans for differences between the VM state database that the BOSH Director maintains and the actual state of the VMs. For each difference detected, `bosh cloudcheck` offers possible repair options.</td>
+	<td>Scans for differences between the VM state database that the BOSH
+		Director maintains and the actual state of the VMs. For each difference
+		detected, <code>bosh cloudcheck</code> offers possible repair
+		options.
+	</td>
   </tr>
   <tr>
     <td><code>deployment [FILENAME]</code></td>
-	<td>Instructs the BOSH Director to apply CLI commands against the deployment that the YAML file FILENAME describes.<br /><br />Displays the current deployment if you omit FILENAME.</td>
+	<td>Instructs the BOSH Director to apply CLI commands against the deployment
+		that the YAML file <code>FILENAME</code> describes.<br />Displays the
+		current deployment if you omit <code>FILENAME</code>.
+	</td>
   </tr>
   <tr>
     <td><code>deployments</code></td>
@@ -48,73 +58,94 @@ Use these commands to administer deployment manifests and all aspects of cluster
   </tr>
   <tr>
     <td><code>download manifest DEPLOYMENT_NAME [SAVE_AS]</code></td>
-	<td>Downloads and saves the deployment manifest of the specified deployment.</td>
+	<td>Downloads and saves the deployment manifest of the specified
+		deployment.
+	</td>
   </tr>
   <tr>
     <td><code>logs JOB [INDEX] [--agent] [--job] [--only filter1,filter2,...] [--all] [--dir DESTINATION_DIRECTORY]</code></td>
-	<td>Fetches job or agent logs from a VM. Supports custom filtering only for job logs.</td>
+	<td>Fetches job or agent logs from a VM. Supports custom filtering only for
+		job logs.
+	</td>
   </tr>
   <tr>
-    <td><code>recreate JOB [INDEX] [--force]
-</code></td>
-	<td>Stops the job process, power cycles the VM, recreates the job instance, then restarts the job process.</td>
+    <td><code>recreate JOB [INDEX] [--force]</code></td>
+	<td>Stops the job process, power cycles the VM, recreates the job instance,
+		then restarts the job process.
+	</td>
   </tr>
   <tr>
-    <td><code>releases [--jobs]
-</code></td>
+    <td><code>releases [--jobs]</code></td>
 	<td>Displays the list of available releases.
-run errand ERRAND_NAME [--download-logs] [--logs-dir DESTINATION_DIRECTORY]
-Instructs the BOSH Director to start running the named errand on a job instance on a VM.</td>
+	</td>
   </tr>
   <tr>
-    <td><code>ssh [--public_key FILE] [--gateway_host HOST] [--gateway_user USER]
-[--gateway_identity_file FILE]
-[--default_password PASSWORD]</code>
-<br /><br />
-OR
-<br /><br />
-<code>ssh JOB [INDEX] [COMMANDS]</code></td>
-	<td>When you provide arguments with an option flag, the BOSH Director starts an interactive session with a job VM using the specified arguments. For example, `bosh ssh --public_key mykey.pub` instructs the BOSH Director to launch an interactive session on a job VM that uses your `mykey.pub` public key.
-<br /><br />
-When you provide arguments without an option flag, the Director executes the arguments as commands on the job VM. For example, `bosh ssh ls -R` runs the `ls -R` command on the specified job VM.</td>
+	<td><code>run errand ERRAND_NAME [--download-logs] [--logs-dir DESTINATION_DIRECTORY]</code></td>
+	<td>Instructs the BOSH Director to start running the named errand on a job
+		instance on a VM.
+	</td>
   </tr>
   <tr>
-    <td><code>status [--uuid]
-</code></td>
-	<td>Displays the configuration file and deployment manifest in use, and information about the BOSH Director such as name, URL, version, logged in user name, UUID, and CPI.</td>
+    <td><code>ssh [--public_key FILE] [--gateway_host HOST] [--gateway_user USER] [--gateway_identity_file FILE] [--default_password PASSWORD]</code>
+<br /><br />OR<br /><br />
+<code>ssh JOB [INDEX] [COMMANDS]</code>
+	</td>
+	<td>When you provide arguments with an option flag, the BOSH Director starts
+		an interactive session with a job VM using the specified arguments. For
+		example, <code>bosh ssh --public_key mykey.pub</code> instructs the BOSH
+		Director to launch an interactive session on a job VM that uses your
+		<code>mykey.pub</code> public key.
+		<br /><br /><br /><br /><br />
+		When you provide arguments without an option flag, the Director executes
+		the arguments as commands on the job VM. For example, <code>bosh ssh ls -R</code> runs the <code>ls -R</code> command on the specified job VM.
+	</td>
+  </tr>
+  <tr>
+    <td><code>status [--uuid]</code></td>
+	<td>Displays the configuration file and deployment manifest in use, and
+		information about the BOSH Director such as name, URL, version, logged
+		in user name, UUID, and CPI.
+	</td>
   </tr>
   <tr>
     <td><code>task [TASK_ID] [--event] [--cpi] [--debug] [--result] [--raw]</code></td>
-	<td>
-Displays the status of a specified task and tracks its output. You can track only one of the following log types at a time: event, CPI, debug, or result. Defaults to event.</td>
+	<td>Displays the status of a specified task and tracks its output. You can
+		track only one of the following log types at a time: event, CPI, debug,
+		or result. Defaults to event.
+	</td>
   </tr>
   <tr>
     <td><code>tasks [--no-filter] </code></td>
-	<td>Displays a table that lists the following for all currently running tasks: ID number, state, timestamp, user, description, and result.
- </td>
+	<td>Displays a table that lists the following for all currently running
+		tasks: ID number, state, timestamp, user, description, and result.</td>
   </tr>
   <tr>
-    <td><code>tasks recent [COUNT] [--no-filter] </code></td>
-	<td>Displays a table that lists the following for the last 30 tasks: ID number, state, timestamp, user, description, and result. </td>
+    <td><code>tasks recent [COUNT] [--no-filter]</code></td>
+	<td>Displays a table that lists the following for the last 30 tasks: ID
+		number, state, timestamp, user, description, and result.
+	</td>
   </tr>
   <tr>
     <td><code>vms [DEPLOYMENT_NAME] [--details] [--dns] [--vitals]</code></td>
-	<td>Displays a table that provides an overview of the VMs BOSH manages as part of the current deployment. You can specify the following options:
-<ul>
-<li>Details: Includes Cloud ID, Agent ID, and the status of the BOSH Resurrector for each VM.</li> 
-<li>DNS: Includes the DNS A record for each VM.</li> 
-<li>Vitals: Includes load, CPU, memory usage, swap usage, system disk usage, ephemeral disk usage, and persistent disk usage for each VM.</li> </ul></td>
-  </tr>
-  <tr>
-    <td><code> </code></td>
-	<td> </td>
+	<td>Displays a table that provides an overview of the VMs BOSH manages as
+		part of the current deployment. You can specify the following options:
+		<br />
+		- <strong>Details</strong>: Includes Cloud ID, Agent ID, and the status
+		of the BOSH Resurrector for each VM.
+		<br />
+		- <strong>DNS</strong>: Includes the DNS A record for each VM.
+		<br />
+		- <strong>Vitals</strong>: Includes load, CPU, memory usage, swap usage,
+		system disk usage, ephemeral disk usage, and persistent disk usage for
+		each VM.
+    </td>
   </tr>
 </table>
 
 ## <a id="deployment"></a>Deployment Management ##
 Use these commands to deploy and delete VMs, view task information, and upload releases.
 
-<table border="1" class="nice" >
+<table class="nice" >
   <tr>
     <th>Command</th>
     <th>Description</th>
@@ -145,21 +176,21 @@ Creates a deployment according to the currently selected deployment manifest.</t
 </table>
 
 ## <a id="lifecycle"></a>Lifecycle Management ##
-Use these commands to manage releases, stemcells, and snapshots. 
+Use these commands to manage releases, stemcells, and snapshots.
 
-<table border="1" class="nice" >
+<table class="nice" >
   <tr>
     <th>Command</th>
     <th>Description</th>
   </tr>
   <tr>
-    <td><code>create release [MANIFEST_FILE] [--force] [--final] [--with-tarball] [--dry-run] [--version VERSION]
-.</code></td>
+    <td><code>create release [MANIFEST_FILE] [--force] [--final] <br />[--with-tarball] [--dry-run] [--version VERSION]
+</code></td>
 	<td>
 Creates a release.</td>
   </tr>
   <tr>
-    <td><code>delete release NAME [VERSION] [--force].</code></td>
+    <td><code>delete release NAME [VERSION] [--force]</code></td>
 	<td>Deletes the release and associated jobs, packages, compiled packages, and their metadata. Fails if a deployment references this release.</td>
   </tr>
   <tr>
@@ -185,7 +216,7 @@ Creates a release.</td>
   <tr>
     <td><code>snapshots
 </code></td>
-	<td>Displays the job/index, CID, and created date of all snapshots.</td>
+	<td>Displays the job, CID, and created date of all snapshots.</td>
   </tr>
   <tr>
     <td><code>stemcells</code></td>
@@ -193,30 +224,30 @@ Creates a release.</td>
   </tr>
   <tr>
     <td><code>take snapshot [JOB] [INDEX]</code></td>
-	<td>Takes a snapshot of the specified JOB VM.<br /><br />
+	<td>Takes a snapshot of the specified JOB VM.<br />
 If the JOB is not specified, takes a snapshot of all deployments.</td>
   </tr>
   <tr>
     <td><code>upload release [RELEASE_FILE] [--rebase] [--skip-if-exists]</code></td>
-	<td>Uploads the specified file as a release. If you do not provide a RELEASE_FILE, you must run this command from a valid release directory.</td>
+	<td>Uploads the specified file as a release. If you do not provide a <code>RELEASE_FILE</code>, you must run this command from a valid release directory.</td>
   </tr>
   <tr>
     <td><code>upload stemcell STEMCELL_LOCATION [--skip-if-exists]
 </code></td>
-	<td>Uploads the specified stemcell. You must specify a URI if the STEMCELL_LOCATION is remote.</td>
+	<td>Uploads the specified stemcell. You must specify a URI if the <code>STEMCELL_LOCATION</code> is remote.</td>
   </tr>
 </table>
 
 ## <a id="release"></a>Release Creation ##
 Use these commands to create releases and upload blobs.
 
-<table border="1" class="nice" >
+<table class="nice" >
   <tr>
     <th>Command</th>
     <th>Description</th>
   </tr>
   <tr>
-    <td><code>create release [MANIFEST_FILE] [--force] [--final] [--with-tarball] [--dry-run] [--version VERSION]
+    <td><code>create release [MANIFEST_FILE] [--force] [--final] <br />[--with-tarball] [--dry-run] [--version VERSION]
 </code></td>
 	<td>Creates a release.</td>
   </tr>
@@ -236,28 +267,10 @@ Use these commands to create and delete users from the BOSH Director.
   </tr>
   <tr>
     <td><code>create user [USERNAME] [PASSWORD]</code></td>
-	<td>Creates a user with the BOSH Director. Prompts you for a USERNAME and PASSWORD if you omit this information.</td>
+	<td>Creates a user with the BOSH Director. Prompts you for a <code>USERNAME</code> and <code>PASSWORD</code> if you omit this information.</td>
   </tr>
   <tr>
     <td><code>delete user [USERNAME]</code></td>
-	<td>Deletes a specific user from the BOSH Director. Prompts you for a USERNAME if you omit this information.</td>
+	<td>Deletes a specific user from the BOSH Director. Prompts you for a <code>USERNAME</code> if you omit this information.</td>
   </tr>
 </table>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
