add sysadmin-commands.html to index

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -43,3 +43,4 @@ Run `bosh help --all` to see all available BOSH commands.
 * [Sample BOSH Deployment Manifest](./sample-manifest.html)
 * [How to Locate and Watch Logs on Job VMs](./job-logs.html)
 * [Using the BOSH Resurrector](./bosh-resurrector.html)
+* [BOSH Commands for System Administration](./sysadmin-commands.html)
